test/rebar_edoc_SUITE_data/bad/apps/bad_foo/src/bad_foo_app.erl
%%%-------------------------------------------------------------------
%% @doc foo public API
%% @end
%%%-------------------------------------------------------------------

-module(bad_foo_app).

-behaviour(application).

%% Application callbacks
-export([start/2, stop/1]).

%%====================================================================
%% API
%%====================================================================

start(_StartType, _StartArgs) ->
    bad_foo_sup:start_link().

%%--------------------------------------------------------------------
stop(_State) ->
    ok.

%%====================================================================
%% Internal functions
%%====================================================================
